<resources>
    <string name="app_name">Reimbursement</string>

    <string name="tab_home">首页</string>
    <string name="tab_reimbursement">报销</string>
    <string name="tab_chart">账表</string>
    <string name="tab_mine">我的</string>

    <string name="title_my_apply_list">我的申请</string>
    <string name="title_my_approval_list">我的审批</string>



    <string name="title_page_mine">我的</string>
    <string name="title_page_home">首页</string>
    <string name="tile_page_apply">我的报销</string>
    <string name="title_page_chart">账表</string>
    <string name="title_page_business_travel_apply">差旅事前申请</string>
    <string name="title_page_business_reimb">差旅报销申请</string>
    <string name="title_page_public_service_apply">公务事前申请</string>
    <string name="title_page_public_service_reimb">公务报销申请</string>

    <string name="title_apply_type">申请类型:</string>
    <string name="title_apply_name">申请人:</string>
    <string name="title_apply_depart">申请人部门:</string>
    <string name="title_apply_status">申请状态:</string>

    <string name="title_business_travel_apply_depart">出差部门:</string>
    <string name="title_business_travel_apply_people">出差人员:</string>
    <string name="title_business_travel_apply_people_count">出差人数:</string>
    <string name="title_business_travel_apply_person_charge">出差负责人:</string>
    <string name="title_business_travel_apply_reason">出差事由:</string>
    
    <string name="title_business_travel_apply_address_start">出发地:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="title_business_travel_apply_address_way">途径地:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="title_business_travel_apply_address_end">目的地:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="title_business_travel_apply_vehicle_go">出发交通工具:</string>
    <string name="title_business_travel_apply_vehicle_back">返回交通工具:</string>
    <string name="title_business_travel_apply_time_begin">开始时间:&#160;&#160;&#160;&#160;</string>
    <string name="title_business_travel_apply_time_end">结束时间:&#160;&#160;&#160;&#160;</string>
    
    <string name="title_business_travel_reimb_project">所属项目:</string>
    <string name="title_business_travel_reimb_cash_pay">现金支付:</string>
    <string name="title_business_travel_reimb_transfer_account">转账支付:</string>
    <string name="title_business_travel_reimb_card_pay">公务卡支付:</string>
    <string name="title_business_travel_reimb_net_pay">网银支付:</string>
    <string name="title_business_travel_reimb_sum_account">报销总额:</string>
    <string name="title_business_travel_reimb_address_begin">开始地点:</string>
    <string name="title_business_travel_reimb_address_end">结束地点:</string>
    
    <string name="title_business_travel_reimb_fee_traffic">车船费</string>
    <string name="title_business_travel_reimb_fee_stay">住宿费</string>
    <string name="title_business_travel_reimb_fee_meals">伙食补助</string>
    <string name="title_business_travel_reimb_fee_traffic_in_city">市内交通补助</string>
    <string name="title_business_travel_reimb_fee_other">其他费用</string>
    
    <string name="title_meals_stay_by_self">食宿自理</string>
    <string name="title_meeting_attend">参加会议</string>
    <string name="title_train_attend">参加培训</string>
    <string name="title_fee_by_depart">负责部门承担费用</string>
    
    <string name="title_meeting_class">会议类型:</string>
    <string name="title_meeting_name">会议名称:</string>
    <string name="title_train_class">培训名称:</string>
    <string name="title_train_name">会议名称:</string>
    
    <string name="title_amount_pre_pay">预付款:</string>
    <string name="title_unit_received">收款单位:</string>
    <string name="title_account_number">账号:&#160;&#160;&#160;&#160;</string>
    <string name="title_bank_for_card">开户行:&#160;&#160;</string>

    <string name="fee_item_person_count">人数:&#160;&#160;&#160;&#160;</string>
    <string name="fee_item_day_count">天数:&#160;&#160;&#160;&#160;</string>
    <string name="fee_item_fee_amount">金额:&#160;&#160;&#160;&#160;</string>
    <string name="fee_item_fee_unit">单价:&#160;&#160;&#160;&#160;</string>
    <string name="fee_item_fee_name">名称:&#160;&#160;&#160;&#160;</string>

    <string name="serial_number_txt">流水号:&#160;&#160;%1$s</string>

    <string name="title_public_service_apply_project">所属项目:</string>
    <string name="title_public_service_apply_depart">接待部门:</string>
    <string name="title_public_service_apply_reception_time">接待时间:</string>
    <string name="title_public_service_apply_received_depart">被接待部门:</string>
    <string name="title_public_service_apply_reception_address">接待地点:</string>
    <string name="title_public_service_apply_reception_basis">接待依据:</string>
    <string name="title_public_service_apply_reception_content">公务内容:</string>

    <string name="title_public_service_apply_guest_person">来宾人员</string>
    <string name="title_public_service_apply_guest_count">来宾人数:</string>
    <string name="title_public_service_apply_eating_count">就餐人数:</string>
    <string name="title_public_service_apply_accompany_count">参陪人数:</string>
    <string name="title_public_service_apply_accompany_person">参陪人员:</string>

    <string name="title_public_service_apply_dining_standards">就餐标准:</string>
    <string name="title_public_service_apply_stay_fee">住宿费:&#160;&#160;</string>
    <string name="title_public_service_apply_other_fee">其他费用:</string>

    <string name="title_public_service_apply_over_standards_fee">超标准接待:</string>
    

    <string name="personal_info_name">姓名:&#160;&#160;%1$s</string>
    <string name="personal_info_duties">职务:&#160;&#160;%1$s</string>
    <string name="personal_info_depart">所属科室:&#160;&#160;%1$s</string>
    
    <string name="mine_item_setting">设置</string>
    <string name="mine_item_version">版本信息</string>
    <string name="mine_item_logout">退出</string>
    
    <string name="shortcut_title_business_travel_apply">差旅申请</string>
    <string name="shortcut_title_business_travel_reimb">差旅报销</string>
    <string name="shortcut_title_public_service_apply">公务申请</string>
    <string name="shortcut_title_public_service_reimb">公务报销</string>
    <string name="shortcut_scan">扫一扫</string>
    <string name="shortcut_upload_file">上传文件</string>

    <string name="btn_next">下一步</string>
    <string name="btn_confirm">确定</string>



</resources>
