<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="baseInfoViewModel"
            type="cn.jsjst.reimbursement.component.rebim.PSReimbBaseInfoViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/title_bar_layout"
            bind:toolbarModel="@{baseInfoViewModel.mToolbarViewModel}"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/custom_activity_padding"
            android:focusableInTouchMode="true"
            android:focusable="true"
            >

            <TextView
                android:id="@+id/tip_serial_number_info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial_number_txt"
                android:textColor="@color/color_black_content"
                android:textSize="@dimen/custom_reimb_serial_number_tip_text_size" />

            <TextView
                android:id="@+id/title_public_service_reimb_project_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/content_public_service_reimb_project"
                android:text="@string/title_public_service_apply_project"
                android:textColor="@color/color_black_title"
                android:textSize="@dimen/custom_apply_title_text_size" />

            <EditText
                android:id="@+id/content_public_service_reimb_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tip_serial_number_info_txt"
                android:layout_marginLeft="@dimen/apply_title_content_margin"
                android:layout_marginTop="@dimen/custom_apply_item_margin"
                android:layout_toRightOf="@id/title_public_service_reimb_project_txt"
                android:textSize="@dimen/custom_apply_content_text_size" />

            <EditText
                android:id="@+id/content_public_service_reimb_depart_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/content_public_service_reimb_project"
                android:layout_below="@id/content_public_service_reimb_project"
                android:layout_marginTop="@dimen/custom_apply_item_margin"
                android:textColor="@color/color_black_content"
                android:textSize="@dimen/custom_apply_content_text_size" />

            <TextView
                android:id="@+id/title_public_service_apply_depart_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/content_public_service_reimb_depart_edit"
                android:layout_below="@id/content_public_service_reimb_project"
                android:text="@string/title_public_service_apply_depart"
                android:textColor="@color/color_black_title"
                android:textSize="@dimen/custom_apply_title_text_size" />

            <EditText
                android:id="@+id/content_public_service_reimb_time_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/content_public_service_reimb_depart_edit"
                android:layout_below="@id/content_public_service_reimb_depart_edit"
                android:layout_marginTop="@dimen/custom_apply_item_margin"
                android:textColor="@color/color_black_content"
                android:textSize="@dimen/custom_apply_content_text_size" />

            <TextView
                android:id="@+id/title_public_service_reimb_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/content_public_service_reimb_time_edit"
                android:layout_below="@id/content_public_service_reimb_depart_edit"
                android:text="@string/title_public_service_apply_reception_time"
                android:textColor="@color/color_black_title"
                android:textSize="@dimen/custom_apply_title_text_size" />

            <EditText
                android:id="@+id/content_public_service_received_depart_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/content_public_service_reimb_time_edit"
                android:layout_below="@id/content_public_service_reimb_time_edit"
                android:layout_marginTop="@dimen/custom_apply_item_margin"
                android:textColor="@color/color_black_content"
                android:textSize="@dimen/custom_apply_content_text_size" />

            <TextView
                android:id="@+id/title_public_service_reimb_received_depart_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/content_public_service_received_depart_edit"
                android:layout_below="@id/content_public_service_reimb_time_edit"
                android:text="@string/title_public_service_apply_received_depart"
                android:textColor="@color/color_black_title"
                android:textSize="@dimen/custom_apply_title_text_size" />

            <EditText
                android:id="@+id/content_public_service_reimb_reception_address_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/content_public_service_received_depart_edit"
                android:layout_below="@id/content_public_service_received_depart_edit"
                android:layout_marginTop="@dimen/custom_apply_item_margin"
                android:textColor="@color/color_black_content"
                android:textSize="@dimen/custom_apply_content_text_size" />

            <TextView
                android:id="@+id/title_public_service_reimb_reception_address_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/content_public_service_reimb_reception_address_edit"
                android:layout_below="@id/content_public_service_received_depart_edit"
                android:text="@string/title_public_service_apply_reception_address"
                android:textColor="@color/color_black_title"
                android:textSize="@dimen/custom_apply_title_text_size" />

            <EditText
                android:id="@+id/content_public_service_reimb_content_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_apply_text_area_height"
                android:layout_alignLeft="@id/content_public_service_reimb_reception_address_edit"
                android:layout_below="@id/content_public_service_reimb_reception_address_edit"
                android:layout_marginTop="@dimen/custom_apply_item_margin"
                android:textColor="@color/color_black_content"
                android:textSize="@dimen/custom_apply_content_text_size" />

            <TextView
                android:id="@+id/title_public_service_reimb_content_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/content_public_service_reimb_content_edit"
                android:layout_below="@id/content_public_service_reimb_reception_address_edit"
                android:text="@string/title_public_service_apply_reception_content"
                android:textColor="@color/color_black_title"
                android:textSize="@dimen/custom_apply_title_text_size" />

            <EditText
                android:id="@+id/content_public_service_reimb_basis_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_apply_text_area_height"
                android:layout_alignLeft="@id/content_public_service_reimb_content_edit"
                android:layout_below="@id/content_public_service_reimb_content_edit"
                android:layout_marginTop="@dimen/custom_apply_item_margin"
                android:textColor="@color/color_black_content"
                android:textSize="@dimen/custom_apply_content_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/content_public_service_reimb_basis_edit"
                android:layout_below="@id/content_public_service_reimb_content_edit"
                android:text="@string/title_public_service_apply_reception_basis"
                android:textColor="@color/color_black_title"
                android:textSize="@dimen/custom_apply_title_text_size" />

            <TextView
                android:id="@+id/next_btn"
                android:layout_width="@dimen/custom_apply_next_btn_width"
                android:layout_height="@dimen/custom_apply_next_btn_height"
                android:layout_alignParentRight="true"
                android:layout_below="@id/content_public_service_reimb_basis_edit"
                android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
                android:background="@drawable/bg_next_btn"
                android:gravity="center"
                android:text="@string/btn_next"
                android:textColor="@color/color_white"
                android:textSize="@dimen/custom_apply_next_btn_text_size"
                android:textStyle="bold"
                android:onClick="@{baseInfoViewModel::onNextClick}"
                />
        </RelativeLayout>
    </LinearLayout>


</layout>
